# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import adminRouter from "./admin";
+import notesRouter from "./notes";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/admin", adminRouter);
+router.use("/notes", notesRouter);
 
 export default router;
